quark/test/quark/AST/Errors/varAlreadyDeclared-004.qk
// RUN: not quark --emit-ast "%s" 2>&1 | FileCheck "%s"

fn foo: -> void {
  for (var i := 1 ; i < 100; i = i + 1)
   var i := 1;
}
// CHECK:Error: var 'i' already defined!
